--- a/creep_factor.ipynb
+++ b/creep_factor.ipynb
@@ -40,10 +40,10 @@
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
-    "import json\n",
-    "from tkinter import Tk\n",
-    "from tkinter.filedialog import askopenfilename, asksaveasfilename\n",
-    "import pickle"
+    "# import json\n",
+    "# from tkinter import Tk\n",
+    "# from tkinter.filedialog import askopenfilename, asksaveasfilename\n",
+    "# import pickle"
    ]
   },
   {
