--- a/concrete_beam/conc_bm_app.ipynb
+++ b/concrete_beam/conc_bm_app.ipynb
@@ -10,7 +10,7 @@
     "from general_app_layout import AppLayout, LinearLayout\n",
     "from conc_bm import ConcreteBeam\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib widget"
+    "#%matplotlib widget"
    ]
   },
   {
