--- a/conc_bm_app.ipynb
+++ b/conc_bm_app.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib widget\n"
     "import ipywidgets as wg\n",
     "from general_app_layout import AppLayout, LinearLayout\n",
     "from conc_bm import ConcreteBeam\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib widget"
+    "import matplotlib.pyplot as plt",
    ]
   },
   {
